--- a/client/src/components/PricingModal/PricingModal.module.scss
+++ b/client/src/components/PricingModal/PricingModal.module.scss
@@ -65,11 +65,10 @@
     color: $button-black;
     font-size: 16px;
     font-weight: bold;
-    line-height: 19px;
-    text-align: center;
     border-radius: 0;
     border: 2px solid $button-black;
     display: flex;
+    align-items: center;
     justify-content: center;
     margin: 46px auto 0 auto;
 
